@@ -17,11 +17,14 @@
 #include "PlayUrlRunner.h"
 
 #include "Debug.h"
+#include "amarokconfig.h"
 #include "AmarokUrl.h"
 #include "AmarokUrlHandler.h"
 #include "collection/CollectionManager.h"
 #include "EngineController.h"
 #include "playlist/PlaylistController.h"
+#include "playlist/PlaylistModelStack.h"
+#include "playlist/proxymodels/AbstractModel.h"
 #include "SqlStorage.h"
 
 PlayUrlRunner::PlayUrlRunner() : AmarokUrlRunnerBase()
@@ -54,9 +57,20 @@ bool PlayUrlRunner::run ( AmarokUrl url )
     if ( !track )
         return false;
 
-//     The::playlistController()->insertOptioned( track, Playlist::AppendAndPlay );
     The::engineController()->play ( track, pos );
-//     The::engineController()->seek(pos);
+
+    Playlist::AbstractModel *model = Playlist::ModelStack::instance()->top();
+
+    if( model->containsTrack( track ) )
+    {
+        model->setActiveRow( model->firstRowForTrack( track ) );
+    }
+    else
+    {
+        const int row = AmarokConfig::dynamicMode() ? model->activeRow() + 1 : model->rowCount();
+        The::playlistController()->insertTrack( row, track );
+        model->setActiveRow( row );
+    }
     return true;
 }
 
